# ge-feishu-doc-agent

./: .env.example  .gitignore  README.md  deploy.sh  pyproject.toml
docs/: DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  GEMINI_ENTERPRISE_REGISTRATION_GUIDE.md
lark_agent/: agent.py  callbacks.py  main.py  tools.py
lark_agent/config/: __init__.py
lark_agent/deployement/: deploy.py
lark_agent/infrastructure/: lark_api_repository.py
scripts/: README.md  batch_delete.sh  check_agent_status.sh  cleanup_deployed.sh  delete_agent.sh  delete_authorization.sh  delete_reasoning_engine.sh  init.sh  list_all_resources.sh  load_env.sh  register_to_GE.sh  update_agent_GE.sh
tests/: test_lark_api_repository.py
